Add Render deployment configuration with Docker, PostgreSQL, and deployment guide

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,18 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+APP_ENV=production
+APP_DEBUG=false
+APP_KEY=
+
+DB_CONNECTION=mysql
+DB_HOST=${DB_HOST}
+DB_PORT=${DB_PORT}
+DB_DATABASE=${DB_DATABASE}
+DB_USERNAME=${DB_USERNAME}
+DB_PASSWORD=${DB_PASSWORD}
+
+SESSION_DRIVER=database
+CACHE_DRIVER=database
