--- a/render.yaml
+++ b/render.yaml
@@ -1,24 +1,12 @@
-services:
-  # PostgreSQL Database
-  - type: pserv
-    name: laravel-rbac-db
-    runtime: docker
+databases:
+  # PostgreSQL Database (Native Render PostgreSQL)
+  - name: laravel-rbac-db
+    databaseName: rbac_db
+    user: rbac_user
     plan: free
     region: oregon
-    image:
-      url: docker.io/postgres:16-alpine
-    disk:
-      name: postgres-data
-      mountPath: /var/lib/postgresql/data
-      sizeGB: 1
-    envVars:
-      - key: POSTGRES_USER
-        value: rbac_user
-      - key: POSTGRES_PASSWORD
-        generateValue: true
-      - key: POSTGRES_DB
-        value: rbac_db
 
+services:
   # Laravel Web Application
   - type: web
     name: laravel-rbac
@@ -47,24 +35,25 @@ services:
       - key: DB_CONNECTION
         value: pgsql
       - key: DB_HOST
-        fromService:
-          type: pserv
+        fromDatabase:
           name: laravel-rbac-db
           property: host
       - key: DB_PORT
-        fromService:
-          type: pserv
+        fromDatabase:
           name: laravel-rbac-db
           property: port
       - key: DB_DATABASE
-        value: rbac_db
-      - key: DB_USERNAME
-        value: rbac_user
-      - key: DB_PASSWORD
-        fromService:
-          type: pserv
+        fromDatabase:
           name: laravel-rbac-db
-          envVarKey: POSTGRES_PASSWORD
+          property: database
+      - key: DB_USERNAME
+        fromDatabase:
+          name: laravel-rbac-db
+          property: user
+      - key: DB_PASSWORD
+        fromDatabase:
+          name: laravel-rbac-db
+          property: password
       - key: BROADCAST_DRIVER
         value: log
       - key: CACHE_DRIVER
