Enhance Nginx configuration and startup script
- Increased client body size and fastcgi read timeout for better handling of requests.
- Updated logging to output to stdout and stderr.
- Modified PHP handling to include environment variables and deny access to hidden files.
- Improved startup script with error handling, permission settings, and cache clearing before migrations.
- Added real-time logging of Laravel logs during startup.

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,14 +5,33 @@ server {
     
     index index.php;
     
+    # Increase timeouts
+    client_max_body_size 20M;
+    fastcgi_read_timeout 300;
+    
+    # Logging
+    access_log /dev/stdout;
+    error_log /dev/stderr;
+    
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
     
     location ~ \.php$ {
+        try_files $uri =404;
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
         include fastcgi_params;
+        
+        # Pass environment variables to PHP
+        fastcgi_param APP_ENV $APP_ENV if_not_empty;
+        fastcgi_param APP_KEY $APP_KEY if_not_empty;
+    }
+    
+    # Deny access to hidden files
+    location ~ /\. {
+        deny all;
     }
 }
